--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,10 @@
       <div class="content">
         <h2>Add a color to see it in action</h2>
         <p>
-          Dart colors make use of the color api to complete the conversions,
-          currently working on building an in house api to ensure only client
-          side conversion is done.
+          Dart colors make use of the
+          <a href="https://thecolorapi.com">color api </a> to complete the
+          conversions, currently working on building an in house api to ensure
+          only client side conversion is done.
         </p>
         <div class="enter">
           <span class="rgb">RGB</span>
