--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./public/styles.css" />
-    <title>Dart Colors</title>
+    <title>Devo Colors</title>
   </head>
   <body>
     <header class="header">
       <div class="logo_title">
         <div class="logo" id="logo"></div>
-        <div class="title">Dart</div>
+        <div class="title">Devo</div>
       </div>
       <!-- <div class="header_button">
         <div onclick="dark()" class="dark_mode">&#x263D;</div>
